Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2vhFYl45D7hl1Jntjkb6MO",
+    "id" : "b4w2BlYdAenchbG8uO9sEC",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
