--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "9egM3VIbTDriI9Y5hgapG4",
+    "id" : "5VlHTiQMpVIdVqo1W6InIg",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000NVN"
+        "repoHandle" : "01001O17000000000O17"
       },
       "contextAttributes" : [ {
         "name" : "id",
