Automation summary for Force Undo Checkout testsOTVlMTllNGMtMTc1OC00Zj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0qgeZwrejOkjiQiVC432y1",
+    "id" : "3KE00EJd7IXf7AtjZovUeC",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
