Automation summary for Force Undo Checkout testsMTcwYTRkNjgtNWMyZi00NW
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "dyldRBGrFE7cPOVVVHMA6D",
+    "id" : "9UZto1NieuGl3k86I8FcSL",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
