Automation summary for Force Undo Checkout testsYmJiMTdhMGMtMjQ3My00Zj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5zmekXhxtwpcqURPMQrCah",
+    "id" : "aYkSJv0vCtHkG8yqdODVQf",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
