--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4tPOdP4EHeAjScBgVb1cGR",
+    "id" : "hsefn2ROBu5jwLM0usZYIM",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OC3"
+        "repoHandle" : "01001O17000000000OCX"
       },
       "contextAttributes" : [ {
         "name" : "id",
