--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5mcw1m1tr2ohRTArrk9OEY",
+    "id" : "2dElyAaQc2Yf51URydOpQ7",
     "name" : "BulkUnlink_Mapping_SQL_FF_1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OC2"
+        "repoHandle" : "01001O17000000000OCZ"
       },
       "contextAttributes" : [ {
         "name" : "id",
