--- a/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "kbxohZXxHS5d5Vrd3oA3C4",
+    "id" : "hiyEQsnueYEbQzN6ytfLOZ",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OBV"
+        "repoHandle" : "01001O17000000000OCR"
       },
       "contextAttributes" : [ {
         "name" : "id",
