--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "bBLEbgdUuUOdQyM6J9eAKn",
+    "id" : "3jIqU3wmHkMj29Khha3JaR",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OBZ"
+        "repoHandle" : "01001O17000000000OCY"
       },
       "contextAttributes" : [ {
         "name" : "id",
