--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8eCeVhLruCOk5fBawkeiEz",
+    "id" : "8HD88xs48YYlj9cx8gADUa",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OC1"
+        "repoHandle" : "01001O17000000000OCW"
       },
       "contextAttributes" : [ {
         "name" : "id",
