Automation summary for Force Undo Checkout testsNWY1NWVhNDYtMzY4OS00Mj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7yJfH1bBGdTgAeW5CIaTCP",
+    "id" : "dzUlBJXsn2EjsD5Wc94LgL",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
