Automation summary for Force Undo Checkout testsODQ5ZmM1YzUtYmRhZS00M2
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "dzUlBJXsn2EjsD5Wc94LgL",
+    "id" : "aEBy8ZzAQU0il26lzqynyA",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
