Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5MtqbFhQjcjhuzz6cPRwyS",
+    "id" : "3UGd0a8okwCckZiO5QJRI1",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
