Automation summary for Force Undo Checkout testsMDZhYjlmODgtZDFkNC00Zj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "aEBy8ZzAQU0il26lzqynyA",
+    "id" : "4Sp8NYfUmK8iA1ZNVqBNkj",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
