Multi checkin assets
Description for Multi checkin assets

--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "dZkEfisR9i6bZhz2DOy6YK",
+    "id" : "9jgVg77nCONebz2wwaEC4c",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000L87"
+        "repoHandle" : "01004J17000000000LB2"
       },
       "contextAttributes" : [ {
         "name" : "id",
