Automation summary for Force Undo Checkout testsMWIxOWU5MDAtOTdhYy00NT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4Sp8NYfUmK8iA1ZNVqBNkj",
+    "id" : "8YXQEtLH8SzfrGZ14czXCk",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
